# ACSpGEMM

./: .clangd  CMakeLists.txt  CMakeLists2nvshmem.txt  CMakeListsbackup.txt  README.md  acspgemm.md
include/: Multiply.h  common.cuh  default_scheduling_traits.h  execution_stats.h
include/acspgemm/: CSR_old.h  Compare.h  Multiply.h  Multiply.h.backup  common.cuh  dCSR_old.h
include/acspgemm/device/: ARowStorage.cuh  Chunk.cuh  HelperFunctions.cuh  MultiplyKernels.h  acSpGEMM_ChunksToCSR.cuh  acSpGEMM_DetermineBlockStarts.cuh  acSpGEMM_MergeGeneralized.cuh  acSpGEMM_MergeMaxChunks.cuh  acSpGEMM_MergeSimple.cuh  acSpGEMM_SpGEMM.cuh  consistent_gpu_memory.h
include/acspgemm/devicetools/: consistent_memory.h  event.h  memory.h  stream.h
include/device/: ARowStorage.cuh  HelperFunctions.cuh  MultiplyKernels.h  acSpGEMM_DetermineBlockStarts.cuh  acSpGEMM_MergeGeneralized.cuh
include/devicetools/: consistent_memory.h
source/: COO_old.cpp  CSR_old.cpp  checkBitStability.cpp  common.cu  dCSR_old.cpp  main.cpp  mainbackup.cpp  mainnvshmem.cu  performTestCase.cpp
source/device/: Compare.cu  Multiply.cu  Transpose.cu  distspgemm.cu  memory.cpp
